docker: various fixes
Signed-off-by: Pierre-Alexandre Meyer <pierre@mouraf.org>